Update Printer.java